# serializer version: 1
# name: test_entities[cover.shutter_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.shutter_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'neosol',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': '0012ABCD_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.shutter_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Shutter 0',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.shutter_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[cover.shutter_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.shutter_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'neosol',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': '0012ABCD_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.shutter_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Shutter 1',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.shutter_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
